[gd_scene load_steps=6 format=3 uid="uid://bt4if4tr3t2bk"]

[ext_resource type="Script" uid="uid://chw1yg7nopi8w" path="res://UI/hud.gd" id="1_b0x6d"]
[ext_resource type="PackedScene" uid="uid://1uq0ijfq8e2y" path="res://UI/heart.tscn" id="1_l2dld"]
[ext_resource type="FontFile" uid="uid://c74txg5256qut" path="res://PlaceholderArt/Xolonium-Regular.ttf" id="2_uevbp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_64iun"]
bg_color = Color(0.469547, 0.72323, 0.598484, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gjdwk"]
bg_color = Color(0.735303, 0.629549, 0.389126, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_b0x6d")

[node name="Heart" parent="." instance=ExtResource("1_l2dld")]
position = Vector2(452, 74)
scale = Vector2(0.3, 0.3)

[node name="LoveLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 162.0
offset_top = 62.0
offset_right = 202.0
offset_bottom = 101.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_uevbp")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1

[node name="Controls" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HungerBar" type="ProgressBar" parent="Controls"]
layout_mode = 0
offset_left = 33.0
offset_top = 69.0
offset_right = 194.0
offset_bottom = 96.0
theme_override_styles/fill = SubResource("StyleBoxFlat_64iun")
value = 100.0

[node name="FunBar" type="ProgressBar" parent="Controls"]
layout_mode = 0
offset_left = 31.0
offset_top = 127.0
offset_right = 195.0
offset_bottom = 154.0
theme_override_styles/fill = SubResource("StyleBoxFlat_64iun")
value = 100.0

[node name="EnergyBar" type="ProgressBar" parent="Controls"]
layout_mode = 0
offset_left = 32.0
offset_top = 185.0
offset_right = 196.0
offset_bottom = 206.0
theme_override_font_sizes/font_size = 12
theme_override_styles/fill = SubResource("StyleBoxFlat_gjdwk")
value = 100.0

[node name="Label" type="Label" parent="Controls"]
layout_mode = 0
offset_left = 20.0
offset_top = 43.0
offset_right = 82.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Hunger:"

[node name="Label2" type="Label" parent="Controls"]
layout_mode = 0
offset_left = 20.0
offset_top = 100.0
offset_right = 82.0
offset_bottom = 123.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Fun:"

[node name="Label3" type="Label" parent="Controls"]
layout_mode = 0
offset_left = 21.0
offset_top = 160.0
offset_right = 83.0
offset_bottom = 183.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Energy: "

[connection signal="mouse_entered" from="LoveLabel" to="." method="_on_love_label_mouse_entered"]
[connection signal="mouse_exited" from="LoveLabel" to="." method="_on_love_label_mouse_exited"]
[connection signal="mouse_entered" from="Controls" to="." method="_on_controls_mouse_entered"]
[connection signal="mouse_exited" from="Controls" to="." method="_on_controls_mouse_exited"]
